--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,12 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    background-image: url('../img/sun_background.jpg'); 
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
 }
+
 
 h1 {
     text-align: center;
@@ -19,7 +24,7 @@ h2 {
     max-width: 60%; 
     margin: 0 auto; 
     padding: 20px;
-    border: 2px solid #ccc;
+    border: 2px solid #5a5a5a;
     border-radius: 10px;
 }
 
