--- a/css/style.css
+++ b/css/style.css
@@ -66,3 +66,47 @@ button#searchBtn {
 button#searchBtn:hover {
     background-color: #0056b3;
 }
+
+#dropDownCard {
+    margin: 0 auto;
+    margin-top: 3%;
+    padding: 5px 30px;
+    width: 290px;
+    height: 370px;
+    border-radius: 10px;
+    background-color: #fff;
+    box-shadow: 1px 2px 10px rgba(0, 0, 0, .2);
+}
+
+span {
+    margin-left: 10px;
+    color: #999;
+    font-weight: 300;
+    font-size: 0.9em;
+}
+
+span span {
+    margin-left: 0;
+}
+
+h3 {
+    float: left;
+    color: #777;
+    font-weight: 400;
+    font-size: 1em;
+    text-align: center;
+    margin-bottom: 20px;
+    margin-top: 0;
+    width: 100%;
+
+}
+
+img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin: 0 auto;
+    display: block;
+    margin-top: 10px;
+    
+}
