--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ button#searchBtn:hover {
     background-color: #0056b3;
 }
 
-#dropDownCard {
+#dropDownCardChild {
     margin: 0 auto;
     margin-top: 3%;
     padding: 5px 30px;
