--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,14 @@ h2 {
     flex-wrap: wrap; /* Permet le passage à la ligne des éléments flexibles */
 }
 
+.drop_down_list {
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+    margin-bottom: 10px;
+    flex-wrap: wrap; /* Permet le passage à la ligne des éléments flexibles */
+}
+
 label {
     flex-shrink: 0;
     margin-right: 1%;
@@ -44,6 +52,14 @@ label {
 
 /* Entrée du code postal */
 input[type="number"] {
+    width: 150px;
+    box-sizing: border-box;
+    padding: 10px;
+    font-size: 15px;
+    text-align: center;
+}
+
+#city-select {
     width: 150px;
     box-sizing: border-box;
     padding: 10px;
