--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ h2 {
 .search_framework {
     max-width: 60%; 
     margin: 0 auto; 
-    padding: 20px;
+    padding: 10px;
     border: 2px solid #5a5a5a;
     border-radius: 10px;
 }
@@ -38,6 +38,7 @@ h2 {
 
 .drop_down_list {
     display: flex;
+    box-sizing: border-box;
     align-items: center;
     justify-content: center; 
     margin-bottom: 10px;
@@ -59,12 +60,12 @@ input[type="number"] {
     text-align: center;
 }
 
-#city-select {
-    width: 150px;
+/* Ajoutez ces styles pour les options */
+.city_select {
+    width: 220px;
     box-sizing: border-box;
     padding: 10px;
     font-size: 15px;
-    text-align: center;
 }
 
 button#searchBtn {
@@ -77,6 +78,7 @@ button#searchBtn {
     cursor: pointer;
     display: block;
     margin: 0 auto;
+    margin-bottom: 10px;
 }
 
 button#searchBtn:hover {
