css/html change

--- a/css/style.css
+++ b/css/style.css
@@ -52,20 +52,20 @@ input[type="number"] {
 }
 
 button#searchBtn {
-    background-color: #007BFF;
+
+    background-color: grey;
     color: #fff;
     padding: 10px 20px;
     font-size: 16px;
     border: none;
     border-radius: 5px;
-    cursor: pointer;
     display: block;
     margin: 0 auto;
 }
 
-button#searchBtn:hover {
+/*button#searchBtn:hover {
     background-color: #0056b3;
-}
+}*/
 
 #dropDownCardChild {
     margin: 0 auto;
@@ -83,10 +83,6 @@ span {
     color: #999;
     font-weight: 300;
     font-size: 0.9em;
-}
-
-span span {
-    margin-left: 0;
 }
 
 h3 {
