--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,9 @@ h2 {
     flex-wrap: wrap; /* Permet le passage à la ligne des éléments flexibles */
 }
 
-label {
+#label_style {
+    color :rgb(0, 0, 0);
+    font-size: 15px;
     flex-shrink: 0;
     margin-right: 1%;
     margin-bottom: 10px; /* Ajout d'une marge en bas pour l'espacement */
@@ -55,21 +57,29 @@ label {
 input[type="number"] {
     width: 150px;
     box-sizing: border-box;
-    padding: 10px;
+    padding: 6px;
     font-size: 15px;
     text-align: center;
+    margin-top: -10px;
+    color:rgb(9, 135, 214);
+    
 }
 
 /* Ajoutez ces styles pour les options */
+.city_select option {
+    color:rgb(9, 135, 214);
+}
+
 .city_select {
     width: 220px;
     box-sizing: border-box;
-    padding: 10px;
+    padding: 6px;
     font-size: 15px;
+    margin-top: -10px;
+    color:rgb(9, 135, 214);
 }
 
 button#searchBtn {
-
     background-color: grey;
     color: #fff;
     padding: 10px 20px;
@@ -79,6 +89,7 @@ button#searchBtn {
     display: block;
     margin: 0 auto;
     margin-bottom: 10px;
+    cursor: not-allowed;
 }
 
 #dropDownCardChild {
