--- a/css/style.css
+++ b/css/style.css
@@ -20,8 +20,9 @@ h2 {
 
 /* Cadre de recherche */
 .search_framework {
-    max-width: 60%; 
-    margin: 0 auto; 
+    max-width: 70%; 
+    margin-right: auto;
+    margin-left: auto;
     padding: 10px;
     border: 2px solid #5a5a5a;
     border-radius: 10px;
@@ -52,7 +53,7 @@ label {
 }
 
 /* Entrée du code postal */
-input[type="number"] {
+#postal_code {
     width: 150px;
     box-sizing: border-box;
     padding: 10px;
@@ -68,8 +69,7 @@ input[type="number"] {
     font-size: 15px;
 }
 
-button#searchBtn {
-
+#searchBtn {
     background-color: grey;
     color: #fff;
     padding: 10px 20px;
@@ -119,4 +119,19 @@ img {
     display: block;
     margin-top: 10px;
     
+}
+
+.errorWarning {
+    color: red;
+    margin-left: auto;
+    margin-right: auto;
+    width: fit-content;
+    display: none;
+    opacity: 0;
+    transition: opacity 1s ease;
+    
+}
+
+#p_error {
+    margin-top: 0;
 }
