--- a/css/style.css
+++ b/css/style.css
@@ -126,11 +126,28 @@ img {
     width: fit-content;
     display: none;
     opacity: 0;
+    
 }
 
 
+@keyframes moveAndGrow {
+    0% {
+        transform: translateY(0px);
+        transform: scale(1);
+    }
+
+    50% {
+        transform: translateY(2px);
+        transform: scale(1.1);
+    }
+
+    100% {
+        transform: translateY(0);
+        transform: scale(1);
+    }
+}
 
 #p_error {
     margin-top: 0;
+    animation: moveAndGrow 2s ease-in-out infinite;
 }
-
