--- a/css/style.css
+++ b/css/style.css
@@ -72,13 +72,16 @@ label {
 #searchBtn {
     background-color: grey;
     color: #fff;
-    padding: 10px 20px;
+    padding: 12px 20px;
     font-size: 16px;
     border: none;
     border-radius: 5px;
     display: block;
-    margin: 0 auto;
+    margin-top: 14px;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 10px;
+    transition: all 0.4s;
 }
 
 #dropDownCardChild {
