--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
+    margin: 5px;
+    padding: 5px;
     background-image: url('../img/bg_sky3.png');
     background-size: cover;
     background-position: center center;
@@ -10,10 +10,10 @@ body {
 }
 
 #title {
-    text-align: center;
-    font-size: 2.5em;
-    font-family: 'Neuton', serif;
     color: white;
+    font-family: 'Neuton', serif;
+    font-size: 2.5em;
+    text-align: center;
     text-shadow: #005064 1px 2px;
 }
 
@@ -23,64 +23,72 @@ h1 {
     color: white;
 }
 
-#web_site_description {
-    text-align: center;
-    font-size: 125%;
-    color: white;
-}
-
+#web_site_description,
 h2 {
     text-align: center;
-    font-size: 125%;
+    font-size: 1.7em;
     color: white;
 }
 
 /* Cadre de recherche */
 #search_framework {
-    max-width: 70%; 
+    background-color: rgba(0, 30, 39, 0.3);
     margin-right: auto;
     margin-left: auto;
     padding: 10px;
+    padding-bottom: 15px;
     border: 2px solid #ffffff;
     border-radius: 10px;
-    width: 80%;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: rgba(0, 30, 39, 0.3);
-    padding-bottom: 10px;
 }
+
+@media (min-width: 1025px) {
+    #search_framework {
+        width: 50%;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    #search_framework {
+        width: 70%;
+    }
+}
+
+@media (max-width: 767px) {
+    #search_framework {
+        width: 90%;
+    }
+}
+
 
 /* Conteneur pour le label et l'input */
 #input-group {
+    margin-bottom: 17px;
     display: flex;
     align-items: center;
     justify-content: center; 
-    margin-bottom: 10px;
-    flex-wrap: wrap; /* Permet le passage à la ligne des éléments flexibles */
-
+    flex-wrap: wrap;
 }
 
 #drop_down_list {
+    margin-bottom: 10px;
     display: flex;
     box-sizing: border-box;
     align-items: center;
-    justify-content: center; 
-    margin-bottom: 10px;
-    flex-wrap: wrap; /* Permet le passage à la ligne des éléments flexibles */
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 #label_style {
-    color :rgb(0, 0, 0);
+    color: white;
     font-size: 15px;
     flex-shrink: 0;
     margin-right: 1%;
-    margin-bottom: 10px; /* Ajout d'une marge en bas pour l'espacement */
-    color: white;
+    margin-bottom: 10px;
 }
 
 /* Entrée du code postal */
 #postal_code {
-    width: 150px;
+    width: fit-content;
     box-sizing: border-box;
     padding: 6px;
     font-size: 15px;
@@ -93,7 +101,7 @@ h2 {
 }
 
 #city_select {
-    width: 220px;
+    width: fit-content;
     box-sizing: border-box;
     padding: 6px;
     font-size: 15px;
@@ -103,6 +111,7 @@ h2 {
     color: white;
     border: solid white 4px;
     border-radius: 20px;
+    cursor : pointer;
 }
 
 #searchBtn {
@@ -113,10 +122,8 @@ h2 {
     border: none;
     border-radius: 5px;
     display: block;
-    margin-top: 14px;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 10px;
     cursor: not-allowed;
     transition: all 0.4s;
     border: solid white 4px;
@@ -124,17 +131,17 @@ h2 {
 }
 
 #dropDownCardChild {
-    margin-top: 3%;
-    padding: 2px 15px;
+    background-color: rgba(0, 30, 39, 0.3);
     width: fit-content;
-    height: 370px;
+    max-width: 77%;
+    height: fit-content;
+    margin-top: 3%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 2px 15px;
     box-shadow: 1px 2px 10px rgba(0, 0, 0, .2);
     border: 2px solid #ffffff;
     border-radius: 10px;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: rgba(0, 30, 39, 0.3);
-    padding-bottom: 10px;
 }
 
 span {
