--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,9 @@
 body {
     font-family: Arial, sans-serif;
-    margin: 5px;
-    padding: 5px;
+    color:#ffffff;
+    font-size: 1em;
+    margin: 2px;
+    padding: 2px;
     background-image: url('../img/bg_sky3.png');
     background-size: cover;
     background-position: center center;
@@ -10,24 +12,22 @@ body {
 }
 
 #title {
-    color: white;
     font-family: 'Neuton', serif;
-    font-size: 2.5em;
+    font-size: 3em;
     text-align: center;
+    margin: 0.3em;
+    padding-bottom: 2%;
     text-shadow: #005064 1px 2px;
-}
-
-h1 {
-    text-align: center;
-    font-size: 200%;
-    color: white;
 }
 
 #web_site_description,
 h2 {
     text-align: center;
-    font-size: 1.7em;
-    color: white;
+}
+
+#city_name {
+    text-align: center;
+    font-size: 200%;
 }
 
 /* Cadre de recherche */
@@ -41,25 +41,6 @@ h2 {
     border-radius: 10px;
 }
 
-@media (min-width: 1025px) {
-    #search_framework {
-        width: 50%;
-    }
-}
-
-@media (min-width: 768px) and (max-width: 1024px) {
-    #search_framework {
-        width: 70%;
-    }
-}
-
-@media (max-width: 767px) {
-    #search_framework {
-        width: 90%;
-    }
-}
-
-
 /* Conteneur pour le label et l'input */
 #input-group {
     margin-bottom: 17px;
@@ -67,6 +48,30 @@ h2 {
     align-items: center;
     justify-content: center; 
     flex-wrap: wrap;
+}
+
+#label_style {
+    font-size: 1em;
+    flex-shrink: 0;
+    margin-right: 1%;
+    margin-bottom: 10px;
+}
+
+#postal_code {
+    width: fit-content;
+    box-sizing: border-box;
+    padding: 6px;
+    font-size: 1em;
+    text-align: center;
+    margin-top: -10px;
+    background-color: #03618d;
+    color: #ffffff;
+    border: solid white 4px;
+    border-radius: 20px;
+}
+
+#postal_code::placeholder {
+    color: #dfdfdf;
 }
 
 #drop_down_list {
@@ -78,37 +83,11 @@ h2 {
     flex-wrap: wrap;
 }
 
-#label_style {
-    color: white;
-    font-size: 15px;
-    flex-shrink: 0;
-    margin-right: 1%;
-    margin-bottom: 10px;
-}
-
-/* Entrée du code postal */
-#postal_code {
-    width: fit-content;
-    box-sizing: border-box;
-    padding: 6px;
-    font-size: 15px;
-    text-align: center;
-    margin-top: -10px;
-    background-color: #03618d;
-    color: white;
-    border: solid white 4px;
-    border-radius: 20px;
-}
-
-#postal_code::placeholder {
-    color: #dfdfdf;
-}
-
 #city_select {
     width: fit-content;
     box-sizing: border-box;
     padding: 6px;
-    font-size: 15px;
+    font-size: 1em;
     margin-top: -10px;
     color:rgb(9, 135, 214);
     background-color: #03618d;
@@ -122,8 +101,8 @@ h2 {
     background-color: grey;
     color: #fff;
     padding: 12px 20px;
-    font-size: 16px;
     border: none;
+    font-size: 1em;
     border-radius: 5px;
     display: block;
     margin-left: auto;
@@ -132,47 +111,6 @@ h2 {
     transition: all 0.4s;
     border: solid white 4px;
     border-radius: 20px;
-}
-
-#dropDownCardChild {
-    background-color: rgba(0, 30, 39, 0.3);
-    width: fit-content;
-    max-width: 77%;
-    height: fit-content;
-    margin-top: 3%;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 2px 15px;
-    box-shadow: 1px 2px 10px rgba(0, 0, 0, .2);
-    border: 2px solid #ffffff;
-    border-radius: 10px;
-}
-
-span {
-    margin-left: 10px;
-    color: #999;
-    font-weight: 300;
-    font-size: 0.9em;
-}
-
-h3 {
-    float: left;
-    color: #777;
-    font-weight: 400;
-    font-size: 1em;
-    text-align: center;
-    margin-bottom: 20px;
-    margin-top: 0;
-    width: 100%;
-}
-
-img {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    margin: 0 auto;
-    display: block;
-    margin-top: 10px;
 }
 
 #errorWarning {
@@ -184,7 +122,6 @@ img {
     opacity: 0;
     
 }
-
 
 @keyframes moveAndGrow {
     0% {
@@ -206,4 +143,168 @@ img {
 #p_error {
     margin-top: 0;
     animation: moveAndGrow 2s ease-in-out infinite;
+}
+
+#dropDownCardChild {
+    background-color: rgba(0, 30, 39, 0.3);
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 2%;
+    padding: 10px;
+    padding-bottom: 15px;
+    border: 2px solid #ffffff;
+    border-radius: 10px;
+}
+
+span {
+    margin-left: 10px;
+    color: #999;
+    font-weight: 300;
+    font-size: 0.9em;
+}
+
+h3 {
+    font-size: 1em;
+    float: left;
+    color: #777;
+    font-weight: 400;
+    text-align: center;
+    width: 100%;
+}
+
+img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin: 0 auto;
+    display: block;
+    margin-top: 10px;
+}
+
+@media (min-width: 2001px) {
+    body {
+        font-size: 1.7em;
+    }
+
+    #title {
+        font-size: 5em;
+    }
+
+    /* Cadre de recherche */
+    #search_framework {
+        width: 65%;
+    }
+    
+    h2 {
+        font-size: 2.5em;
+    }
+
+    #dropDownCardChild {
+        width: 40%;
+    }
+}
+
+@media (min-width: 1440px) and (max-width: 2000px) {
+    #title {
+        font-size: 4em;
+    }
+
+    /* Cadre de recherche */
+    #search_framework {
+        width: 65%;
+    }
+    
+    h2 {
+        font-size: 2.1em;
+    }
+
+    #dropDownCardChild {
+        width: 40%;
+    }
+}
+
+@media (min-width: 1024px) and (max-width: 1439px) {
+    #title {
+        font-size: 3.5em;
+    }
+
+    /* Cadre de recherche */
+    #search_framework {
+        width: 70%;
+    }
+
+    h2 {
+        font-size: 1.8em;
+    }
+
+    #dropDownCardChild {
+        width: 40%;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+    #title {
+        font-size: 3.3em;
+    }
+
+    /* Cadre de recherche */
+    #search_framework {
+        width: 80%;
+    }
+    
+    h2 {
+        font-size: 1.6em;
+    }
+
+    #dropDownCardChild {
+        width: 50%;
+    }
+}
+
+@media (min-width: 425px) and (max-width: 767px) {
+    #title {
+        font-size: 2.8em;
+    }
+
+    /* Cadre de recherche */
+    #search_framework {
+        width: 85%;
+    }
+    
+    h2 {
+        font-size: 1.3em;
+    }
+
+    #dropDownCardChild {
+        width: 85%;
+    }
+}
+
+@media (min-width: 375px) and (max-width: 424px) {
+    #title {
+        font-size: 2.4em;
+    }
+
+    /* Cadre de recherche */
+    #search_framework {
+        width: 90%;
+    }
+    
+    h2 {
+        font-size: 1.2em;
+    }
+
+    #dropDownCardChild {
+        width: 90%;
+    }
+}
+
+@media (min-width: 320px) and (max-width: 374px) {
+    #title {
+        font-size: 2.2em;
+    }
+
+    h2 {
+        font-size: 1.08em;
+    }
 }
