--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@ body {
 
 #web_site_description,
 h2 {
+    margin-top: 10px;
     text-align: center;
 }
 
@@ -48,6 +49,7 @@ h2 {
     margin-left: auto;
     padding: 10px;
     padding-bottom: 15px;
+    margin-bottom: 2%;
     border: 2px solid #ffffff;
     border-radius: 10px;
 }
@@ -118,6 +120,7 @@ h2 {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 10px;
     cursor: not-allowed;
     transition: all 0.4s;
     border: solid white 4px;
@@ -158,6 +161,7 @@ h2 {
 
 #city_selected {
     font-size: 1.3em;
+    margin-top: -5px;
 }
 
 #dropDownCardChild {
