--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,9 @@ body {
 }
 
 #title {
-    font-family: 'Neuton', serif;
+    /*font-family: 'Neuton', serif;*/
+    /*font-family: 'Open Sans', sans-serif;*/
+    font-family: 'Noto Sans JP', sans-serif;
     font-size: 3em;
     text-align: center;
     margin: 0.3em;
