--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,6 @@ body {
 }
 
 #title {
-    /*font-family: 'Neuton', serif;*/
-    /*font-family: 'Open Sans', sans-serif;*/
     font-family: 'Noto Sans JP', sans-serif;
     font-size: 3em;
     text-align: center;
@@ -66,7 +64,7 @@ h2 {
 }
 
 #postal_code {
-    width: fit-content;
+    width: 13em;
     box-sizing: border-box;
     padding: 6px;
     font-size: 1em;
@@ -105,6 +103,7 @@ h2 {
 #city_select {
     width: fit-content;
     box-sizing: border-box;
+    text-align: center;
     padding: 6px;
     font-size: 1em;
     margin-top: -10px;
@@ -134,7 +133,7 @@ h2 {
 }
 
 #errorWarning {
-    color: red;
+    color: #ff0000;
     margin-left: auto;
     margin-right: auto;
     width: fit-content;
@@ -173,6 +172,9 @@ h2 {
     padding-bottom: 15px;
     border: 2px solid #ffffff;
     border-radius: 10px;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
 }
 
 #day {
@@ -186,12 +188,7 @@ h2 {
     margin-top: -5px;
 }
 
-#actual_weather {
-    color:#ffffff;
-    font-size: 1.2em;
-}
-
-#weather {
+#icon_weather {
     font-size: 4em;
     margin-right: auto;
     margin-left: auto;
@@ -199,10 +196,35 @@ h2 {
     margin-top: -5px;
 }
 
+#actual_weather {
+    color:#ffffff;
+    font-size: 1.2em;
+}
+
+#temp_min, #temp_max, #sun_time, #raining_pourcentage {
+    padding: 1px;
+    width: 40%;
+}
+
+#temp_min, #temp_max {
+    grid-row: 1;
+}
+
+#sun_time, #raining_pourcentage {
+    grid-row: 2;
+}
+
+#temp_min {
+    margin-left: 10%;
+}
+    
+#temp_max {
+    margin-right: 10%;
+}
+
 .temperature {
-    font-size: 1.1em;
-    color: #ffffff;
-    font-weight: bold;
+    width: 100%;
+    display: flex;
 }
 
 #temperature_min {
@@ -213,21 +235,20 @@ h2 {
 }
 
 #temperature_max {
-    color: #ff5024;
+    color: #fd6464;
     font-size: 1.3em;
     font-weight: bold;
     margin-left: -5px;
 }
 
 #sun_and_rain {
+    margin-left: 10%;
     width: 100%;
     display: flex;
 }
 
 #sun_time {
     color: #ffe75f;
-    width: 45%;
-    margin-left: 5%;
     font-size: 1em;
 }
 
@@ -237,9 +258,8 @@ h2 {
 }
 
 #raining_pourcentage {
+    margin-right: 10%;
     color: #c7d8fa;
-    width: 45%;
-    margin-right: 5%;
     font-size: 1em;
 }
 
@@ -270,7 +290,7 @@ h3 {
 
 .actualisation {
     color:black;
-    font-size: 0.9em;
+    font-size: 1em;
     text-align: right;
     padding-right: 5%;
 }
