Fixed bug preventing weather icons from appearing as intended by CSS

--- a/css/style.css
+++ b/css/style.css
@@ -200,7 +200,7 @@ h2 {
     margin-top: -5px;
 }
 
-#icon_weather {
+.icon_weather {
     font-size: 4em;
     margin-right: auto;
     margin-left: auto;
