--- a/css/style.css
+++ b/css/style.css
@@ -96,12 +96,12 @@ h2 {
     display: none;
  }
 
- /* Fallback for other browsers */
- #postal_code[type="number"] {
+
+#postal_code[type="number"] {
     appearance: textfield;
     -moz-appearance: textfield;
     -webkit-appearance: textfield;
- }
+}
 
 #drop_down_list {
     margin-bottom: 10px;
@@ -127,6 +127,7 @@ h2 {
     cursor : pointer;
 }
 
+
 #searchBtn {
     background-color: grey;
     color: #fff;
@@ -134,7 +135,6 @@ h2 {
     border: none;
     font-size: 1em;
     border-radius: 5px;
-    display: block;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 10px;
@@ -142,6 +142,54 @@ h2 {
     transition: all 0.4s;
     border: solid white 4px;
     border-radius: 20px;
+}
+
+#modalWindowBtn {
+    border: none;
+    background-color: #ffffff00;
+    color: #ffffff;
+    display: none;
+}
+
+#modalWindow {
+    display: none;
+    /* display: block; */ /*temporary*/
+    position: fixed; /* Stay in place */
+    padding-top: 100px; /* Location of the box */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    background-color: rgba(0, 0, 0, 0.452); /* Black w/ opacity */
+}
+
+#modalWindowContent {
+    background-color: #ffffff;
+    margin: auto;
+    padding-bottom: 25px;
+    width: 50%;
+    color: black;
+}
+
+#close {
+    color: #494949;
+    font-size: 28px;
+    font-weight: bold;
+    float: right;
+    width: 1.1em;
+}
+  
+#close:hover,
+#close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+#modalTitle {
+    padding-top: 25px;
+    margin: 0px;
 }
 
 #errorWarning {
@@ -354,6 +402,7 @@ img {
 @media (min-width: 2001px) {
     body {
         font-size: 1.7em;
+        animation: animateBG 25s ease-in-out infinite;
     }
 
     #title {
@@ -375,6 +424,10 @@ img {
 }
 
 @media (min-width: 1440px) and (max-width: 2000px) {
+    body {
+        animation: animateBG 40s ease-in-out infinite;
+    }
+
     #title {
         font-size: 4em;
     }
@@ -394,6 +447,10 @@ img {
 }
 
 @media (min-width: 1024px) and (max-width: 1439px) {
+    body {
+        animation: animateBG 70s ease-in-out infinite;
+    }
+
     #title {
         font-size: 3.5em;
     }
@@ -413,6 +470,9 @@ img {
 }
 
 @media (min-width: 768px) and (max-width: 1023px) {
+    body {
+        animation: animateBG 90s ease-in-out infinite;
+    }
     #title {
         font-size: 3.3em;
     }
@@ -432,6 +492,10 @@ img {
 }
 
 @media (min-width: 425px) and (max-width: 767px) {
+    body {
+        animation: animateBG 100s ease-in-out infinite;
+    }
+
     #title {
         font-size: 2.8em;
     }
@@ -473,6 +537,9 @@ img {
 }
 
 @media (min-width: 375px) and (max-width: 424px) {
+    body {
+        animation: animateBG 110s ease-in-out infinite;
+    }
     #title {
         font-size: 2.4em;
     }
@@ -513,6 +580,10 @@ img {
 }
 
 @media (min-width: 320px) and (max-width: 374px) {
+    body {
+        animation: animateBG 120s ease-in-out infinite;
+    }
+
     #title {
         font-size: 2.2em;
     }
