--- a/css/style.css
+++ b/css/style.css
@@ -337,7 +337,7 @@ h3 {
 }
 
 .actualisation {
-    color:black;
+    color:#ffffff;
     font-size: 1em;
     text-align: right;
     padding-right: 5%;
