--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ h2 {
     margin-bottom: 10px;
 }
 
-#label_input_style {
+.label_input_style {
     font-size: 1em;
     flex-shrink: 0;
     margin-right: 1%;
@@ -108,8 +108,6 @@ h2 {
 
 #postal_code[type="number"] {
     appearance: textfield;
-    -moz-appearance: textfield;
-    -webkit-appearance: textfield;
 }
 
 #drop_down_list {
@@ -580,7 +578,7 @@ img {
         font-size: 0.9em;
     }
 
-    #label_input_style {
+    .label_input_style {
         float: left;
         font-size: 1em;
     }
@@ -631,7 +629,7 @@ img {
         font-size: 0.85em;
     }
 
-    #label_input_style {
+    .label_input_style {
         float: left;
         font-size: 0.9em;
     }
@@ -673,7 +671,7 @@ img {
         font-size: 0.8em;
     }
 
-    #label_input_style {
+    .label_input_style {
         float: left;
         font-size: 0.8em;
     }
